--- a/portal-votaciones-master/templates/index.html
+++ b/portal-votaciones-master/templates/index.html
@@ -3,64 +3,17 @@
 
 <head>
     <title>Inicio</title>
-    <meta charset="utf-8">
-    <!-- Latest compiled and minified CSS -->
-   <!-- <link rel="stylesheet" href="../static/bootstrap/dist/css/bootstrap.min.css"/> -->
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css"/>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="../static/bootstrap/js/jquery.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    {% include 'includes.html' %}
 
 </head>
 
 <body>
-<header class="container">
-      <!-- Static navbar -->
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../index">nVotes US</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
-            <ul class="nav navbar-nav">
-              <li><a href="#"><img src="http://shababsa7.net/images/PageImage-515435-3918738-home_icon.png" height="20px"/> Home</a></li>
-              <li><a href="#"><img src="https://www.cmu.edu/about/images/icon-i.png" height="20px"/> About</a></li>
-                <li><a href="#">Contact</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Static top</a></li>
-              <li><a href="#">Fixed top</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
 
-
-
-</header>
+{% include 'menu.html' %}
 
 <!-- Main component for a primary marketing message or call to action -->
-     <div class="container">
+    <div class="container">
       <div class="jumbotron">
         <h1>Navbar example</h1>
         <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
